python-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dms-python
  namespace: zordms
  labels: {app: dms-python}
spec:
  selector: {app: dms-python}
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
